--- a/datamanagerwindow.ui
+++ b/datamanagerwindow.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>1318</width>
-    <height>532</height>
+    <height>669</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -17,9 +17,9 @@
    <property name="geometry">
     <rect>
      <x>20</x>
-     <y>30</y>
+     <y>100</y>
      <width>601</width>
-     <height>301</height>
+     <height>331</height>
     </rect>
    </property>
   </widget>
@@ -27,9 +27,9 @@
    <property name="geometry">
     <rect>
      <x>650</x>
-     <y>30</y>
+     <y>100</y>
      <width>631</width>
-     <height>301</height>
+     <height>331</height>
     </rect>
    </property>
   </widget>
@@ -37,7 +37,7 @@
    <property name="geometry">
     <rect>
      <x>240</x>
-     <y>340</y>
+     <y>470</y>
      <width>201</width>
      <height>23</height>
     </rect>
@@ -50,7 +50,7 @@
    <property name="geometry">
     <rect>
      <x>870</x>
-     <y>340</y>
+     <y>470</y>
      <width>201</width>
      <height>23</height>
     </rect>
@@ -62,8 +62,8 @@
   <widget class="QPushButton" name="addKanjiButton">
    <property name="geometry">
     <rect>
-     <x>200</x>
-     <y>460</y>
+     <x>320</x>
+     <y>580</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -75,8 +75,8 @@
   <widget class="QPushButton" name="addVocabularyButton">
    <property name="geometry">
     <rect>
-     <x>910</x>
-     <y>460</y>
+     <x>1000</x>
+     <y>580</y>
      <width>201</width>
      <height>31</height>
     </rect>
@@ -89,7 +89,7 @@
    <property name="geometry">
     <rect>
      <x>560</x>
-     <y>480</y>
+     <y>610</y>
      <width>171</width>
      <height>41</height>
     </rect>
@@ -102,7 +102,7 @@
    <property name="geometry">
     <rect>
      <x>30</x>
-     <y>380</y>
+     <y>510</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -118,7 +118,7 @@
    <property name="geometry">
     <rect>
      <x>120</x>
-     <y>380</y>
+     <y>510</y>
      <width>104</width>
      <height>31</height>
     </rect>
@@ -128,7 +128,7 @@
    <property name="geometry">
     <rect>
      <x>250</x>
-     <y>380</y>
+     <y>510</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -138,7 +138,7 @@
    <property name="geometry">
     <rect>
      <x>440</x>
-     <y>380</y>
+     <y>510</y>
      <width>171</width>
      <height>31</height>
     </rect>
@@ -148,7 +148,7 @@
    <property name="geometry">
     <rect>
      <x>40</x>
-     <y>420</y>
+     <y>550</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -161,7 +161,7 @@
    <property name="geometry">
     <rect>
      <x>160</x>
-     <y>420</y>
+     <y>550</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -174,7 +174,7 @@
    <property name="geometry">
     <rect>
      <x>310</x>
-     <y>420</y>
+     <y>550</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -187,7 +187,7 @@
    <property name="geometry">
     <rect>
      <x>490</x>
-     <y>420</y>
+     <y>550</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -200,7 +200,7 @@
    <property name="geometry">
     <rect>
      <x>990</x>
-     <y>390</y>
+     <y>520</y>
      <width>161</width>
      <height>31</height>
     </rect>
@@ -210,7 +210,7 @@
    <property name="geometry">
     <rect>
      <x>690</x>
-     <y>390</y>
+     <y>520</y>
      <width>61</width>
      <height>31</height>
     </rect>
@@ -226,7 +226,7 @@
    <property name="geometry">
     <rect>
      <x>1170</x>
-     <y>390</y>
+     <y>520</y>
      <width>121</width>
      <height>31</height>
     </rect>
@@ -236,7 +236,7 @@
    <property name="geometry">
     <rect>
      <x>1050</x>
-     <y>430</y>
+     <y>560</y>
      <width>47</width>
      <height>13</height>
     </rect>
@@ -249,7 +249,7 @@
    <property name="geometry">
     <rect>
      <x>830</x>
-     <y>420</y>
+     <y>550</y>
      <width>101</width>
      <height>20</height>
     </rect>
@@ -262,7 +262,7 @@
    <property name="geometry">
     <rect>
      <x>1200</x>
-     <y>430</y>
+     <y>560</y>
      <width>61</width>
      <height>16</height>
     </rect>
@@ -275,7 +275,7 @@
    <property name="geometry">
     <rect>
      <x>710</x>
-     <y>430</y>
+     <y>560</y>
      <width>47</width>
      <height>16</height>
     </rect>
@@ -288,10 +288,36 @@
    <property name="geometry">
     <rect>
      <x>790</x>
-     <y>390</y>
+     <y>520</y>
      <width>181</width>
      <height>31</height>
     </rect>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="searchKanjiButton">
+   <property name="geometry">
+    <rect>
+     <x>90</x>
+     <y>580</y>
+     <width>161</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Rechercher le Kanji</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="searchVocabularyButton">
+   <property name="geometry">
+    <rect>
+     <x>810</x>
+     <y>580</y>
+     <width>161</width>
+     <height>31</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Rechercher le vocabulaire</string>
    </property>
   </widget>
  </widget>
